--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
     "short_name": "Vita",
     "description": "Review and correct email categories on mobile",
     "start_url": "/",
+    "scope": "/"
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#2196F3",
@@ -22,4 +23,5 @@
     ]
 
 }
+
 
