--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "short_name": "Vita",
     "description": "Review and correct email categories on mobile",
     "start_url": "/",
-    "scope": "/"
+    "scope": "/",
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#2196F3",
@@ -23,5 +23,6 @@
     ]
 
 }
+
 
 
